[package]
name = "codefend-panel"
version = "24.2.2"
description = "Security Platform Panel"
authors = ["Codefend"]
repository = "https://github.com/codefen/codefend-user"
default-run = "codefend-panel"
edition = "2021"
rust-version = "1.80.0"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "codefend_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-process = "2.0.0"
tauri-plugin-notification = "2.0.0-rc.1"
tauri-plugin-upload = "2.0.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-log = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-window-state = "2.0.1"
tauri-plugin-http = "2.0.1"
reqwest = { version = "0.12.8", features = ["blocking"] }
chrono = "0.4"
is_elevated = "0.1"
winapi = { version = "0.3.9", features = ["winbase"] }
base64 = "0.22.1"
futures = "0.3"
futures-util = "0.3"
encoding_rs = "0.8.28"
regex = "1.5"
mac_address = "1.1.5"
whoami = "1.5.0"
os_info = "3.7.0"

# winsafe = { git = "https://github.com/rodrigocfd/winsafe", features = ["kernel"] }
[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
objc = "0.2.7"
rand = "0.8"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.0.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
